--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,26 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.SavingByShopping" parent="Theme.Material3.Light.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
+        <!-- Warna utama -->
+        <item name="colorPrimary">@color/backround_latar</item>
+        <item name="colorOnPrimary">@color/hijau_gelap</item>
+        <item name="colorPrimaryContainer">@color/hijau_transparant</item>
+        <item name="colorOnPrimaryContainer">@color/black</item>
+
+        <!-- Warna sekunder -->
         <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="colorOnSecondaryContainer">@color/white</item>
+
+        <!-- Indicator Active -->
+        <item name="colorOnSurface">@color/black</item>
+        <item name="colorSecondaryContainer">@color/tab_active</item>
+
+        <!-- Warna latar & konten -->
+        <item name="colorOnBackground">@color/backround_latar</item>
+
+        <!-- Warna status bar & navigation bar -->
+        <item name="android:statusBarColor">@color/backround_latar</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
+
 </resources>
