--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/tab_home"
-        android:enabled="true"
+        android:id="@+id/homeFragment"
         android:icon="@drawable/baseline_home_24"
         android:title="@string/tab_home" />
     <item
-        android:id="@+id/tab_saving"
-        android:enabled="true"
+        android:id="@+id/savingFragment"
         android:icon="@drawable/baseline_error_24"
         android:title="@string/tab_saving" />
     <item
-        android:id="@+id/tab_profile"
-        android:enabled="true"
+        android:id="@+id/profileFragment"
         android:icon="@drawable/baseline_error_24"
         android:title="@string/tab_profile" />
 </menu>
