--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/</item>
+        <item>@font/dm_sans</item>
         <item>@font/dm_sans_bold</item>
+        <item>@font/do_hyeon</item>
+        <item>@font/source_serif_4_bold</item>
     </array>
 </resources>
