--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,6 +19,8 @@
     <color name="tab_active">#93D393</color>
     <color name="tab_inactive">#717F6D</color>
     <color name="not_yet">#D9D9D9</color>
+    <color name="tv_transparant">#757575</color>
+    <color name="button_ripple">#2CB2AC</color>
 
 
 </resources>
