--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,4 +23,12 @@
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
+    <style name="ButtonApp.versi1" parent="@style/Widget.Material3.Button.TonalButton">
+        <item name="android:textColor">@color/hijau_gelap</item>
+        <item name="backgroundTint">@color/button_normal</item>
+        <item name="rippleColor">@color/button_ripple</item>
+        <item name="android:textSize">17sp</item>
+        <item name="fontFamily">@font/source_serif_4_bold</item>
+    </style>
+
 </resources>
