--- a/app/src/main/res/layout/fragment_add_shopping.xml
+++ b/app/src/main/res/layout/fragment_add_shopping.xml
@@ -1,14 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backround_latar"
     tools:context=".ui.addShoppingList.AddShoppingFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="JOKOWI" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/title_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.025" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tv_titleAddShopping"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="13dp"
+        android:fontFamily="@font/dm_sans_bold"
+        android:text="@string/title_shoppingReceipt"
+        android:textAlignment="center"
+        android:textColor="@color/hijau_gelap"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="@+id/title_guideline" />
+
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
