--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,6 +5,7 @@
         <item>@font/dm_sans</item>
         <item>@font/dm_sans_bold</item>
         <item>@font/do_hyeon</item>
+        <item>@font/roboto_serif_bold</item>
         <item>@font/source_serif_4_bold</item>
     </array>
 </resources>
